remove duplicate libs, changes for CDMA tab
Change-Id: I976270a53768e65452da224ac426ab019ba3ed95

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Current Contributors:
 
-Samsung Galaxy Tab GT-P1000
-Technomancer
+Samsung Galaxy Tab SPH-P100/SCH-I800
+oldmacnut, Technomancer
 
 If you would like to contribute, shoot a pull request
 
